<resources>
    <string name="app_name">Playlist maker</string>
    <string name="theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="share_text">Хочу порекомендовать курс по Андроид-разработке в Практикуме</string>
    <string name="share_app_link">https://practicum.yandex.ru/profile/android-developer/?from=catalog</string>
    <string name="share_title">Поделиться приложением</string>
    <string name="support_email">anastasiya.tarazevich22@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_text_fail">Почтовое приложение не найдено</string>
    <string name="update">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью</string>
    <string name="no_media">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="fav_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="download_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="your_history">Ваша история</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="track_time">Длительность</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="name_paylist">Название*</string>
    <string name="description_paylist">Описание</string>
    <string name="create_paylist">Создать</string>
    <string name="minutes_format">%1$d %2$s</string>
    <string name="no_tracks_in_playlist">В плейлисте еще нет треков:(</string>
    <string name="data_loss">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="no_permission">Разрешение не предоставлено:(</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="delete_playlist_title">Хотите удалить трек?</string>
    <string name="delete_playlist_message">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="share_playlist_1">Поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактировать информацию</string>
</resources>