<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="?attr/textAppearanceBodyLarge"
            android:textSize="@dimen/text_big"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            style="@style/MenuButtons"
            android:text="@string/search"
            app:icon="@drawable/search"/>

        <Button
            android:id="@+id/library"
            style="@style/MenuButtons"
            android:text="@string/media"
            app:icon="@drawable/light_mode_library"/>

        <Button
            android:id="@+id/settings"
            style="@style/MenuButtons"
            android:text="@string/settings"
            app:icon="@drawable/light_mode_settings"/>

    </LinearLayout>
</LinearLayout>