<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.search.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.playlistmaker.media.ui.MediaLibraryFragment"
        android:label="@string/media"
        tools:layout="@layout/fragment_media_library">
        <action
            android:id="@+id/action_mediaLibraryFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_mediaLibraryFragment_to_playlistInfoFragment"
            app:destination="@id/playlistInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.media.ui.fragments.CreatePlaylistFragment"
        android:label="CreatePlaylistFragment">
    </fragment>

    <fragment
        android:id="@+id/playlistInfoFragment"
        android:name="com.example.playlistmaker.media.ui.fragments.PlaylistInfoFragment"
        android:label="PlaylistInfoFragment">
        <argument
            android:name="playlistId"
            app:argType="integer" />
        <action
            android:id="@+id/action_playlistInfoFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

</navigation>