<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:layout_marginBottom="24dp">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/light_mode_back"
                app:tint="@color/dark_gray" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            >

            <TextView
                android:textStyle="bold"
                android:id="@+id/settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_big" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:orientation="horizontal"
        android:padding="@dimen/list_item_padding"
        android:paddingEnd="8dp"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <Switch
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:trackTint="@color/light_gray"
            android:thumbTint="@color/gray"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:orientation="horizontal"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end"
            android:src="@drawable/light_mode_share"
            app:iconTint="@color/gray" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:orientation="horizontal"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end"
            android:src="@drawable/light_mode_support"
            app:iconTint="@color/gray" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:orientation="horizontal"
        android:padding="@dimen/list_item_padding"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end"
            android:src="@drawable/light_mode_arrow_forward"
            app:iconTint="@color/gray" />
    </FrameLayout>

</LinearLayout>