<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back_button"
        style="@style/MaterialToolbar"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/light_mode_back"
        app:title="@string/new_playlist" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlist_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@drawable/placeholder_playlist"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:src="@drawable/placeholder_playlist_add"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:shapeAppearanceOverlay="@style/PlaylistImageRounded" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/RoundedTextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name_paylist"
        android:textColorHint="?attr/textAppearanceBody1"
        app:boxStrokeColor="@color/edittext_stroke_color"
        app:hintEnabled="true"
        app:cursorColor="@color/background_blue"
        app:hintTextAppearance="@style/HintCollapsedStyle"
        app:layout_constraintTop_toBottomOf="@+id/playlist_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlists_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:theme="@style/CursorStyle"
            android:textSize="@dimen/text_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/RoundedTextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/description_paylist"
        android:textColorHint="?attr/textAppearanceBody1"
        app:boxStrokeColor="@color/edittext_stroke_color"
        app:hintEnabled="true"
        app:cursorColor="@color/background_blue"
        app:hintTextAppearance="@style/HintCollapsedStyle"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

        <EditText
            android:id="@+id/playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:theme="@style/CursorStyle"
            android:textSize="@dimen/text_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/create_playlist"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/create_paylist"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>